Correção de bugs estilizações
Correção no bug que fazia a tela ficar com conteúdo invisível para a direita e estilização no scrollbar adicionada.

--- a/Projeto-integrador/assets/css/styles.css
+++ b/Projeto-integrador/assets/css/styles.css
@@ -35,8 +35,9 @@ p {
 header {
   /* Topo da página. */
   background: #0b4a8d;
-  box-shadow: 0px 19px 18px 23px rgba(0, 0, 0, 0.185);
-  border-radius: 5px;
+  /* box-shadow: 0px 19px 18px 23px rgba(0, 0, 0, 0.185);
+  border-radius: 5px; */
+  height: 86px;
 }
 
 #imgs {
@@ -116,6 +117,10 @@ header {
 
 @media screen and (max-width: 730px) {
   /* Caso o usuário esteja pelo celular, o menu é adaptado para menu hamburguer. */
+
+  header {
+    height: auto;
+  }
 
   .nav-bar {
     padding: 1.5rem 4rem;
@@ -216,7 +221,7 @@ header {
 .embed {
   display: flex;
   justify-content: center;
-  padding-top: 30px;
+  padding-top: 5%;
   padding-bottom: 56.25%;
   position: relative;
   width: 100%;
@@ -232,7 +237,13 @@ header {
   box-shadow: 0px 0px 19px 14px rgba(0, 0, 0, 0.292);
   border-radius: 10px;
 }
-
+::-webkit-scrollbar {
+  width: 10px;
+  height: 5px;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #0b4a8d;
+}
 /* Animações */
 [data-anima] {
   opacity: 0;
@@ -240,13 +251,13 @@ header {
 }
 
 [data-anima="esquerda"] {
-  transform: translate3d(-50px, 0, 0); /*x, y, z*/
+  transform: translate3d(0px, 0, 0); /*x, y, z*/
 }
 [data-anima="direita"] {
-  transform: translate3d(50px, 0, 0); /*x, y, z*/
+  transform: translate3d(0px, 0, 0); /*x, y, z*/
 }
 [data-anima="centro"] {
-  transform: translate3d(0, 50px, 0); /*x, y, z*/
+  transform: translate3d(0, 10px, 0); /*x, y, z*/
 }
 [data-anima].animacao {
   opacity: 1;
